@@ -1,3 +1,2 @@
 - Sort nanos of viaccess and cryptoworks emms.
 - Add ipv6 support (multicast send/recv).
-- Investigate EMM filters implemented in https://github.com/joolzg/tsdecrypt
